--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -9,32 +9,49 @@ body {
     margin: 0;
     padding: 0;
 }
+header {
+    background-color: rgba(255, 255, 255, 0.8);
+    display: grid;
+    grid-template-columns: 150px auto;
+    z-index: 2;
+    position: relative; 
+}
 h2 {
     margin: 0;
     text-align: center;
 }
-
+/* ------------------------------------- */
 #content {
     max-width: 1600px;
     margin: 0 auto;
 }
-
+/* ------------------------------------- */
 .home-title {
     color: white;
     font-family: "Trade Winds", "Caesar Dressing";
     font-size: 2em;
     margin-top: 10px;
 }
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
 .logo {
     width: 80px;
 }
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
-
+/* ------------------------------------- */
+nav { 
+    display: flex;
+    justify-content: space-around;
+}
 nav a {
     text-align: center;
-    background-color: white;
+    background-color: none; /*rgba(255, 255, 255, 0.8)*/
     color:#0B3D77;
     text-decoration: none;
     padding: 35px; 
@@ -42,40 +59,53 @@ nav a {
 nav a:hover {
     background-color: #A1A32C;
 }
-
-header {
-    background-color: white;
+/* ------------------------------------- */
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    /* z-index: 0; */
 }
 #hero-img {
     width: 100%;
 }
-
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    text-align: center;
+    margin-top: 100px;
+    position: relative;
+    z-index: 1;
+}
 #hero-msg h1, #hero-msg h4 {
     text-align: center;
 }
-h4 {
-    color: red;
+#hero-msg h4 {
+    color: white;
 }
-
+/* ------------------------------------- */
 .button-box {
     text-align: center;
 }
-
+/* ------------------------------------- */
 main section {
     text-align: center;
 }
 main section img {
     box-sizing: border-box;
 }
-.rivers-card, .camping-card, .rapids-card {
-    margin: 200px 0;
-}
-
+/* ------------------------------------- */
 #background {
     height: 725px;
-    background-color: #0B3D77;
+    background-color: white; /*#0B3D77 #6f7364*/
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
-
+/* ------------------------------------- */
 .book, .join {
     background-color: #008667;
     color: black;
@@ -88,11 +118,14 @@ main section img {
 .book:hover, .join:hover {
     background-color: #A1A32C;
 }
-
+/* ------------------------------------- */
 .msg {
     background-color: #008667;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px black;
 }
 .msg h2 {
     color: white;
@@ -103,12 +136,15 @@ main section img {
     font-size: .8em; 
     padding-bottom: 15px;
 }
-
+/* ------------------------------------- */
 footer {
     background-color: #0B3D77;
     color: rgba(255, 255, 255, 0.796);
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer p {
     font-size: 1.2em;
@@ -125,12 +161,86 @@ footer p a:hover {
 footer .social img {
     padding-top: 15px;
 }
-
+/* ------------------------------------- */
 .icon {
     width: 80px;
     padding-top: 10px;
 }
-
+/* ------------------------------------- */
 .card-img {
     border: 10px solid black;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px black;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+.card-img, .mountains {
+    width: 100%;
+}
+.mountains {
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px black;
+}
+
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+/* --------------------------------------------------------------- */
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+     nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    #hero-msg h1 {
+        color: #6f7364;
+    }
+    .home-title {
+        font-size: 25px;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
