--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,65 +1,100 @@
-/* (this is good for temp placement) */
-/* * {
-    border: solid red;
-}    */
+@import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap'); /*Rock Salt*/
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap'); /*Playfair Display*/
+@import url('https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&display=swap'); /*Covered By Your Grace*/
+@import url('https://fonts.googleapis.com/css2?family=National+Park:wght@200..800&display=swap'); /*National Park*/
 
+/* #ff0000
+#bd0000
+#03354c
+#031e2a
+#000000 */
 
-body {
-    margin: 0;
-    font-size: 24px;
-    background-color: rgb(17, 130, 186);
+body{
+    background-color: rgb(18, 4, 79);
+    font-family: "National Park", "Covered By Your Grace";
+    color: white;
+    padding: 20px;
 }
-header, footer {
-    background-color: rgb(17, 130, 186);
-}
+
 nav {
     text-align: center;
-    padding: 40px;
-}
-nav a {
-    padding: 20px;
-    color: black;
-}
-nav a:hover {
-    color: rgb(17, 130, 186);
-    text-decoration: none; 
-}
-#content {
-    max-width: 900px;
-    background-color: white;
-    margin: 40px auto;
-    padding: 40px;
-}
-img {
-    width: 50%;
-    text-align: center;
-    border-color: black;
-    margin: 0 auto;
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    justify-items: center;
+    background-color: rgb(136, 10, 10);
+    text-decoration: none;
     border-radius: 20px;
 }
-#title {
+
+nav a {
+    color: white;
+    padding: 50px 50px;
+    font-size: 150%;
+    text-decoration: none;
+}
+nav a:hover {
+    text-decoration: underline;
+    background-color: rgb(81, 5, 64);
+}
+
+h1 {
     text-align: center;
-    font-size: 4em; /*em goes off the body pixels*/
+    margin: 100px auto;
 }
-#comp-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    justify-items: center;
+h2 {
+    padding-left: 200px;
 }
-#html {
-    grid-column: 1/3;
+h1, h2, h3 {
+    font-family: 'Rock Salt', 'Covered By Your Grace';
 }
-#css {
-    grid-column: 2/3;
-    grid-row: 2/3;
-}
-.shadow {
-    background-color: lightgrey;
-}
-p {
-    
-    padding: 40px; 
-}
-footer {
+
+#titleimage {
     text-align: center;
 }
+
+#grid1 {
+    display:grid;
+    grid-template-columns: 48% 48%;
+    padding: 25px;
+}
+#grid2 {
+    display:grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    background-color: rgb(136, 10, 10);
+    padding: 25px;
+    border-radius: 20px;
+}
+
+#box1 {
+    text-align: center;
+}
+
+#grid3 {
+    display:grid;
+    grid-template-columns: 48% 48%;
+    padding: 25px;
+}
+
+table {
+    border: 10px solid rgb(136, 10, 10);
+}
+th {
+    padding-bottom: 10px;
+    text-decoration: underline;
+    font-size: 1.2em;
+}
+td {
+    padding: 10px;
+}
+tr:nth-child(even) {
+  background-color: rgb(136, 10, 10);
+}
+
+img {
+    width: 150px;
+}
+
+ footer {
+    text-align: right;
+    color: rgba(61, 215, 61, 0.71);
+ }
