--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,7 +9,7 @@
 #031e2a
 #000000 */
 
-body{
+/* body{
     background-color: rgb(18, 4, 79);
     font-family: "National Park", "Covered By Your Grace";
     color: white;
@@ -97,4 +97,4 @@ img {
  footer {
     text-align: right;
     color: rgba(61, 215, 61, 0.71);
-}
+} */
