--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,90 +11,167 @@
 
 body{
     background-color: rgb(18, 4, 79);
-    font-family: "National Park", "Covered By Your Grace";
+    font-family: "National Park", "Playfair Display";
     color: white;
-    padding: 20px;
+    padding-top: 20px;
+    margin: 5px 0px 0px 0px;
 }
 
-nav {
+h1, h2, h3 {
+    font-family: 'Rock Salt', 'Covered By Your Grace';
+}
+
+h2 {
     text-align: center;
-    display:grid;
+}
+
+/* ----------------nav---------------- */
+nav {
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     justify-items: center;
     background-color: rgb(136, 10, 10);
     text-decoration: none;
     border-radius: 20px;
+    margin: 5px 2%;
+    margin-bottom: 28px;
+    align-items: center;
 }
 
 nav a {
     color: white;
-    padding: 50px 50px;
-    font-size: 150%;
+    padding: 1rem 2rem;
+    font-size: 1.5rem;
     text-decoration: none;
+    white-space: nowrap;
 }
 nav a:hover {
     text-decoration: underline;
     background-color: rgb(81, 5, 64);
 }
 
+#logo {
+    width: 10vw;
+    max-width: 200px; 
+    height: auto;
+}
+/* ----------------title---------------- */
+#title-image {
+    text-align: center;
+    position: relative;
+    width: 100%
+}
+
+#galaxy {
+    width: 100%;
+    display: block;
+
+}
+
 h1 {
     text-align: center;
-    margin: 100px auto;
+    margin: 0px;
+    font-size: clamp(2rem, 5vw, 5rem);
+    z-index: 1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%; 
 }
-h2 {
-    padding-left: 200px;
-}
-h1, h2, h3 {
-    font-family: 'Rock Salt', 'Covered By Your Grace';
-}
-
-#titleimage {
-    text-align: center;
-}
-
+/* ----------------grid 1---------------- */
 #grid1 {
     display:grid;
-    grid-template-columns: 48% 48%;
-    padding: 25px;
-}
-#grid2 {
-    display:grid;
-    grid-template-columns: 25% 25% 25% 25%;
-    background-color: rgb(136, 10, 10);
-    padding: 25px;
-    border-radius: 20px;
+    grid-template-columns: 1fr 1fr;
+    padding: 30px 60px;
+    gap: 50px;
 }
 
-#box1 {
+#HP {
+    grid-column: 1/2;
+}
+
+#forest {
+    grid-column: 2/3;
+    padding-right: 10px;
+    width: 100%;
+    padding-top: 4%;
+}
+
+/* ----------------grid 2---------------- */
+#grid2 {
+    position: relative;
+    background-color: rgb(136, 10, 10);
+    padding: 30px;
+    border-radius: 20px;
+    margin: 5px 25px;
     text-align: center;
 }
 
-#grid3 {
+.four {
     display:grid;
-    grid-template-columns: 48% 48%;
-    padding: 25px;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 5%;
+}
+#box1 {
+    grid-column: 1/2;
 }
 
-table {
-    border: 10px solid rgb(136, 10, 10);
+#logo2, #me, #wwr, #everything {
+    width: 80%;
 }
+
+#box2 {
+    grid-column: 2/3;
+}
+
+#box3 {
+    grid-column: 3/4;
+}
+
+#box4 {
+    grid-column: 4/5;
+}
+
+/* ----------------grid 3---------------- */
+.table-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    padding: 30px;
+}
+
+#table {
+    border: 10px solid rgb(12, 3, 52);
+}
+
 th {
     padding-bottom: 10px;
     text-decoration: underline;
     font-size: 1.2em;
 }
+
 td {
-    padding: 10px;
+    padding: 15px;
 }
+
 tr:nth-child(even) {
   background-color: rgb(136, 10, 10);
 }
 
-img {
-    width: 150px;
+tr:nth-child(odd) {
+  background-color: rgb(12, 3, 52);
 }
-
+/* ----------------footer---------------- */
  footer {
     text-align: right;
     color: rgba(61, 215, 61, 0.71);
+    margin: 0px;
+    padding: 20px;
+    position: relative;
+    bottom: -20px;
+    background-color: rgb(12, 3, 52);
 }
